# sdl2-imgui-cmake-vcpkg-example

./: CMakeLists.txt  LICENSE  README.md  vcpkg.json
cmake/: Vcpkg.cmake
src/: main.cpp
